--- a/local.properties
+++ b/local.properties
@@ -2,6 +2,7 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Thu Nov 19 22:58:54 IST 2015
-sdk.dir=/home/saurav/Android/Sdk
+# For customization when using a Version Control System, please read the
+# header note.
+#Mon Mar 02 12:10:44 PST 2020
+sdk.dir=C\:\\Users\\Rizwan computer\\AppData\\Local\\Android\\Sdk
